--- a/app/src/main/res/layout/fragment_street_art_detail.xml
+++ b/app/src/main/res/layout/fragment_street_art_detail.xml
@@ -4,7 +4,8 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="be.ehb.xplorebxl.View.Fragments.StreetArtDetailFragment">
+    tools:context="be.ehb.xplorebxl.View.Fragments.StreetArtDetailFragment"
+    tools:layout_editor_absoluteY="81dp">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -12,44 +13,26 @@
         android:id="@+id/iv_detail_streetart"
         android:layout_width="120dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:src="@drawable/common_google_signin_btn_icon_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_detail_streetart_artistname"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_detail_streetart_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="163dp"
-        tools:text="artname" />
+        tools:layout_editor_absoluteX="22dp"
+        tools:layout_editor_absoluteY="8dp" />
 
     <TextView
         android:id="@+id/tv_detail_streetart_artistname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textStyle="italic"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_streetart_name"
-        tools:layout_editor_absoluteX="164dp"
-        tools:text="artistname" />
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="16dp"
+        tools:text="Artistname" />
 
     <TextView
         android:id="@+id/tv_detail_streetart_explanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_streetart_artistname"
         tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="52dp"
         tools:text="explanation" />
 </android.support.constraint.ConstraintLayout>
