--- a/app/src/main/res/layout/row_streetart.xml
+++ b/app/src/main/res/layout/row_streetart.xml
@@ -23,7 +23,7 @@
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
 
     <TextView
-        android:id="@+id/tv_row_streetart_artname"
+        android:id="@+id/tv_row_streetart_artistname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -33,7 +33,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_row_streetart_address"
         app:layout_constraintStart_toStartOf="@+id/tv_row_streetart_address"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Name of art" />
+        tools:text="Name of artist" />
 
     <TextView
         android:id="@+id/tv_row_streetart_address"
@@ -44,6 +44,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_row_streetart"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_streetart_artname"
+        app:layout_constraintTop_toBottomOf="@+id/tv_row_streetart_artistname"
         tools:text="Address of art" />
 </android.support.constraint.ConstraintLayout>
