--- a/app/src/main/res/layout/fragment_museum_detail.xml
+++ b/app/src/main/res/layout/fragment_museum_detail.xml
@@ -13,12 +13,14 @@
         android:id="@+id/tv_detail_museum_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="64dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="Museum aan de stroom"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_detail_museum_address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,11 +29,11 @@
         android:id="@+id/tv_detail_museum_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Rolwagenstraat 67, Antwerpen"
-        app:layout_constraintBottom_toTopOf="@+id/btn_detail_museum_phone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_detail_museum_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_detail_museum_name" />
 
@@ -39,22 +41,22 @@
         android:id="@+id/btn_detail_museum_phone"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:background="@android:drawable/stat_sys_phone_call_forward"
+        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_museum_address" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_detail_museum_mail"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginStart="16dp"
         android:background="@android:drawable/sym_action_email"
+        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="@+id/btn_detail_museum_phone"
         app:layout_constraintStart_toEndOf="@+id/btn_detail_museum_phone"
         app:layout_constraintTop_toTopOf="@+id/btn_detail_museum_phone" />
@@ -63,9 +65,10 @@
         android:id="@+id/btn_detail_museum_website"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginStart="16dp"
         android:background="@drawable/common_google_signin_btn_icon_dark"
+        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="@+id/btn_detail_museum_mail"
         app:layout_constraintStart_toEndOf="@+id/btn_detail_museum_mail"
         app:layout_constraintTop_toTopOf="@+id/btn_detail_museum_mail" />
