--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,5 +18,8 @@
             android:icon="@android:drawable/stat_notify_chat"
             android:title="@string/txt_nav_about" />
     </group>
+    <item
+        android:id="@+id/nav_update"
+        android:title="Update Data" />
 
 </menu>
