--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:clickable="true"
     tools:context="be.ehb.xplorebxl.View.Fragments.AboutFragment">
 
     <!-- TODO: Update blank fragment layout -->
