--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,26 +21,27 @@
 
     </FrameLayout>
 
+    <ImageButton
+        android:id="@+id/btn_main_close"
+        android:layout_width="0dp"
+        android:layout_height="15dp"
+        android:background="@color/cardview_dark_background"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_frag_container"
+        app:srcCompat="@drawable/ic_keyboard_arrow_up_24dp" />
+
     <FrameLayout
         android:id="@+id/detail_frag_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@android:color/background_light"
+        android:clickable="true"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/btn_main_close"
-            android:background="@null"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </FrameLayout>
 </android.support.constraint.ConstraintLayout>
