--- a/app/src/main/res/layout/fragment_street_art_detail.xml
+++ b/app/src/main/res/layout/fragment_street_art_detail.xml
@@ -4,7 +4,7 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="be.ehb.xplorebxl.View.Fragments.StreetArtDetailFragment"
+    tools:context="be.ehb.xplorebxl.View.Fragments.StreetArt.StreetArtDetailFragment"
     tools:layout_editor_absoluteY="81dp">
 
     <!-- TODO: Update blank fragment layout -->
