--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/mi_marker_filter"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
+    <group android:id="@+id/mg_filter">
+        <item
+            android:id="@+id/mi_marker_filter"
+            android:icon="@android:drawable/ic_menu_sort_by_size"
 
-        android:orderInCategory="100"
-        android:title="@string/mi_filter"
-        app:showAsAction="always" />
-
-
+            android:orderInCategory="100"
+            android:title="@string/mi_filter"
+            app:showAsAction="always" />
+    </group>
 
 
 </menu>
