--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#FF030410</color>
     <color name="colorAccent">#E30059</color>
 
+    <color name="black_overlay">#66000000</color>
+
 </resources>
