--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -69,16 +69,16 @@
     <FrameLayout
         android:id="@+id/fab_frag_container"
         android:layout_width="0dp"
-        android:layout_height="140dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="24dp"
-        android:background="@android:color/background_light"
+        android:background="@android:color/transparent"
         android:clickable="true"
+        android:focusable="true"
         android:foregroundGravity="top"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:focusable="true">
+        app:layout_constraintStart_toStartOf="parent">
 
     </FrameLayout>
 
