--- a/app/src/main/res/layout/fragment_fab.xml
+++ b/app/src/main/res/layout/fragment_fab.xml
@@ -4,6 +4,7 @@
     android:id="@+id/frameLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     tools:context="be.ehb.xplorebxl.View.Fragments.FabFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,6 +13,7 @@
         android:id="@+id/fab_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
