--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#2C0909</color>
-    <color name="colorPrimaryDark">#FF030410</color>
+    <color name="colorPrimaryDark">#030410</color>
     <color name="colorAccent">#E30059</color>
 
     <color name="black_overlay">#66000000</color>
