--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -4,14 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:clickable="true"
-    tools:context="be.ehb.xplorebxl.View.Fragments.AboutFragment">
+    tools:context="be.ehb.xplorebxl.View.Fragments.AboutFragment" android:focusable="true">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ImageView
-        android:id="@+id/iv_test"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/common_google_signin_btn_icon_dark" />
 </FrameLayout>
