added chinese language String resource

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,6 @@
     </group>
     <item
         android:id="@+id/nav_update"
-        android:title="Update Data" />
+        android:title="@string/txt_nav_item_update_data" />
 
 </menu>
