--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,10 +21,14 @@
             android:id="@+id/nav_list_comics"
             android:icon="@drawable/ic_comics"
             android:title="@string/txt_nav_list_comics" />
+    </group>
+    <group>
+
         <item
             android:id="@+id/nav_about"
             android:icon="@android:drawable/ic_menu_help"
             android:title="@string/txt_nav_about" />
+
     </group>
     <item
         android:id="@+id/nav_update"
