--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="colorPrimaryDark">#030410</color>
     <color name="colorAccent">#e30059</color>
 
-    <color name="black_overlay">#66000000</color>
+    //nav Drawer
+    <color name="color_navigation_list_background">#FFFFFF</color>
+    <color name="color_selector_navigation_icon">#e30059</color>
+    <color name="color_selector_navigation_item">#030410</color>
+
+    <color name="black_overlay">#030410</color>
 
 </resources>
