--- a/app/src/main/res/menu/marker_list.xml
+++ b/app/src/main/res/menu/marker_list.xml
@@ -18,5 +18,8 @@
     <item
         android:id="@+id/pu_streetart"
         android:title="@string/pu_streetart" />
+    <item
+        android:id="@+id/pu_fav"
+        android:title="@string/pu_favourites" />
 
 </menu>
