--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#e30059</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="Blue_dark">#2a76a9</color>
 
 </resources>
